# VoteIndia

./: .gitignore
backend/: .env  .gitignore  Cargo.toml  account.txt  db.sqlite3
backend/contracts/: contracts_Parties_sol_Parties.abi  contracts_SwarajToken_sol_SwarajToken.abi
backend/src/: main.rs
backend/src/middlewares/: auth.rs
backend/src/routes/: admin.rs  candidates.rs  forms.rs  mod.rs  nationalparty.rs  parties.rs  swarajtoken.rs  user.rs
backend/src/utils/: generate_account.rs  jwt.rs  mod.rs  models.rs  password.rs
backend/src/utils/contracts/: helper.rs  mod.rs  national_election.rs  party_contract.rs  swarajtoken.rs
blockchain/: hardhat.config.js  package-lock.json  package.json  test.js
blockchain/contracts/: Central.sol  CentralVote.sol  NationalElection.sol  Parties.sol  StateVote.sol  SwarajToken.sol  Vote.sol
blockchain/ignition/modules/: NationalElection.js  SwarajTokem.js  deploy.js  parties.js  t.js  test.js
blockchain/output/: _home_anonymous_Documents_test2_contracts_contarct_sol_Deployer.abi  _home_anonymous_Documents_test2_contracts_contarct_sol_IParties.abi  contracts_NationalElection_sol_ISwarajToken.abi  contracts_NationalElection_sol_NationalElection.abi  contracts_Parties_sol_Parties.abi  contracts_SimpleStorage_sol_SimpleStorage.abi
blockchain/test/: CentralVote.js  Parties.js  StateVote.js  SwarajToken.js  private.js
frontend/: out.txt  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+38 files in other folders)
