[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
serde = "1.0.217"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.39"
sha2 = "0.10.8"

serde_json = "1.0.138"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
uuid = {version = "1.16.0", features = ['v4']}
env_logger = "0.11.6"
actix-cors = "0.7.0"
actix-identity = "0.8.0"
jsonwebtoken = "9.3.1"
mongodb = "3.2.1"
actix-files = "0.6.6"
futures = "0.3.31"
actix-service = "2.0.2"
url = "2.5.4"
web3 = "0.19.0"
hex = "0.4.3"
secp256k1 = "0.30.0"
ipfs-api-backend-actix = "0.7.0"
